[package]
name = "network-tic-tac-toe"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1"
tracing-actix-web = "0.7.2"
serde-aux = "4.1.2"
anyhow = "1.0.69"
serde = { version = "1.0.171", features = ["derive"] }
config = "0.13.3"
rand = "0.8.5"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
serde_json = "1.0.103"
dotenv = "0.15.0"
